--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://127.0.0.1:5555",
   "dependencies": {
+    "@feathersjs/feathers": "^5.0.21",
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "@testing-library/jest-dom": "^5.17.0",
